# Malu

./: .gitignore  Cargo.toml  README.md  bootstrap_malu.sh
crates/malu-api/: Cargo.toml
crates/malu-api/src/: lib.rs
crates/malu-app/: Cargo.toml
crates/malu-app/src/: lib.rs
crates/malu-auth/: Cargo.toml
crates/malu-auth/src/: error.rs  lib.rs  provider.rs
crates/malu-cli/: Cargo.toml
crates/malu-cli/src/: lib.rs
crates/malu-core/: Cargo.toml
crates/malu-core/src/: config.rs  error.rs  lib.rs
crates/malu-crypto/: Cargo.toml
crates/malu-crypto/src/: aead.rs  error.rs  hash.rs  hsm.rs  kdf.rs  key_management.rs  lib.rs  provider.rs  signature.rs
crates/malu-event/: Cargo.toml
crates/malu-event/src/: lib.rs  models.rs
crates/malu-event/src/brokers/: kafka.rs  memory.rs  mod.rs  rabbitmq.rs
crates/malu-governance/: Cargo.toml
crates/malu-governance/src/: error.rs  lib.rs  policy.rs
crates/malu-governance/src/providers/: file.rs  memory.rs  mod.rs  opa.rs
crates/malu-hsm/: Cargo.toml
crates/malu-hsm/src/: error.rs  lib.rs  provider.rs
crates/malu-interfaces/: Cargo.toml
crates/malu-interfaces/src/: lib.rs
crates/malu-k8s/: Cargo.toml
crates/malu-k8s/src/: lib.rs
crates/malu-observability/: Cargo.toml
crates/malu-observability/src/: lib.rs
crates/malu-recovery/: Cargo.toml
crates/malu-recovery/src/: lib.rs
crates/malu-storage/: Cargo.toml
crates/malu-storage/src/: encrypted.rs  error.rs  file_system.rs  leveldb.rs  lib.rs  memory.rs  postgres.rs  repository.rs  s3.rs  utils.rs  valkey.rs
crates/malu-storage/src/tests/: mod.rs
data/keys/: master.key
docs/security/: authentication-guide.md  secret-rotation-policy.md
k8s/base/: deployment.yaml  network-policy.yaml  service.yaml
k8s/istio/: destination-rule.yaml  peer-authentication.yaml  virtual-service.yaml
k8s/observability/: signoz-config.yaml
src/: config.rs  lib.rs  main.rs  metrics.rs
src/api/: dynamic.rs  health.rs  mod.rs  rotation.rs  rotation_new.rs  secrets.rs
src/core/: error.rs  malustore_dynamic.rs  mod.rs  store.rs
src/core/auth/: mod.rs  simple_auth.rs  token_auth.rs
src/core/crypto/: aes_provider.rs  mod.rs
src/core/storage/: file_storage.rs  memory_storage.rs  mod.rs  redis_storage.rs  sql_storage.rs
src/events/: consumer.rs  handler.rs  mod.rs  models.rs  producer.rs
src/models/: mod.rs
src/service/: mod.rs  rotation_service.rs  secret_service.rs  secret_service_dynamic.rs  temp_service.rs
src/service/rotation/: api_token.rs  database.rs  encryption_key.rs  key_value.rs  mod.rs  ssh_key.rs  tls_certificate.rs
tests/: lib.rs  mod.rs
tests/integration/: mod.rs  test_api_integration.rs
tests/unit/: mod.rs  test_malustore.rs  test_secret_service.rs
