[package]
name = "secret-storage-service"
version = "0.1.0"
edition = "2021"
authors = ["Malu Team"]
description = "Self-contained microservice for secure secret storage"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web framework and related
axum = "0.6"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["trace", "cors", "timeout", "limit"] }
hyper = "0.14"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1.6"
once_cell = "1.18"

# Crypto
ring = "0.16"
base64 = "0.21"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Storage
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "macros", "chrono", "uuid", "json"] }
redis = { version = "0.23", features = ["tokio-comp", "aio"] }

# Event streaming
rdkafka = { version = "0.30", features = ["cmake-build", "ssl", "sasl"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Documentation
utoipa = { version = "3.3", features = ["axum_extras"] }
utoipa-swagger-ui = "3.1"

# Observability and APM - Currently disabled but prepared for future integration
# Keep versions compatible with each other to avoid compilation issues
opentelemetry = { version = "0.20", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.13", features = ["http-proto", "grpc-tonic", "metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.12", optional = true }
tracing-opentelemetry = { version = "0.20", optional = true }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"], optional = true }
axum-tracing-opentelemetry = { version = "0.13", optional = true }

[features]
# Feature flag to enable OpenTelemetry integration when dependencies are compatible
telemetry = [
    "opentelemetry", 
    "opentelemetry-otlp", 
    "opentelemetry-semantic-conventions", 
    "tracing-opentelemetry",
    "opentelemetry_sdk",
    "axum-tracing-opentelemetry"
]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
