[package]
name = "secret-storage-service"
version = "0.1.0"
edition = "2021"
authors = ["Malu Team"]
description = "Self-contained microservice for secure secret storage and credential rotation (Vault replacement)"

[lib]
name = "secret_storage_service"
path = "src/lib.rs"

[[bin]]
name = "secret-storage-service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework and related
axum = { version = "0.7", features = ["http1", "http2", "tokio"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit", "set-header"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http = "1.0"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1.6"
once_cell = "1.18"
cron = "0.12.0"
glob = "0.3.1"

# Metrics and Observability
prometheus = "0.13"
lazy_static = "1.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Crypto
ring = "0.17.13" # Latest stable version with security fixes
base64 = "0.21.5" # Latest 0.21.x release
aes-gcm = "0.10.3" # Latest stable release
sha2 = "0.10.8" # Latest stable release
hmac = "0.12.1" # Latest stable release
pbkdf2 = "0.12.2" # Latest stable release

# Thread safety and synchronization
parking_lot = "0.12.1"
hex = "0.4.3" # For hex encoding
subtle = "2.5.0" # For constant-time comparisons
x25519-dalek = "2.0.0" # For asymmetric key exchange
ed25519-dalek = "2.1.0" # For digital signatures
argon2 = "0.5.2" # For password hashing (more modern than pbkdf2)
rand = "0.8.5" # For secure random generation
rsa = { version = "0.9.2", features = ["pem"] } # For RSA operations

# Storage
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "macros", "chrono", "uuid", "json"] } # Latest stable with security fixes
redis = { version = "0.24.0", features = ["tokio-comp", "aio", "cluster", "json"] } # Latest stable release with added features
etcd-client = { version = "0.11", features = ["tls"] } # For distributed configuration
redb = "1.5.0" # Embedded database for local secret caching

# Event streaming
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] } # Latest stable release

# Configuration
config = "0.14" # Latest stable release
# Replaced unmaintained dotenv with actively maintained dotenvy
dotenvy = "0.15.7" # Latest stable version of the dotenv replacement

# Documentation
utoipa = { version = "4.1", features = ["axum_extras"] } # Latest stable version
utoipa-swagger-ui = "5.0" # Latest compatible with utoipa 4.x

# Observability and APM - Updated to latest compatible versions
# These are the latest stable versions that work together
opentelemetry = { version = "0.21", features = ["metrics"], optional = true }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "grpc-tonic", "metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.13", optional = true }
tracing-opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
axum-tracing-opentelemetry = { version = "0.15", optional = true }

[features]
# Feature flag to enable OpenTelemetry integration when dependencies are compatible
telemetry = [
    "opentelemetry", 
    "opentelemetry-otlp", 
    "opentelemetry-semantic-conventions", 
    "tracing-opentelemetry",
    "opentelemetry_sdk",
    "axum-tracing-opentelemetry"
]

# Feature flags for various secret backends
secret-rotation = [] # Base feature for malu-secret-rotation functionality
aws-secrets = [] # AWS Secrets Manager integration
azure-keyvault = [] # Azure Key Vault integration
gcp-secretmanager = [] # Google Cloud Secret Manager integration
hsm-support = [] # Hardware Security Module support
dynamic-credentials = [] # Dynamic credential generation for databases, etc.
leader-election = [] # Cluster leader election for HA deployments

[dev-dependencies]
tokio-test = "0.4.3" # Latest stable
mockall = "0.12" # Latest stable
cargo-audit = "0.21.2" # For security scanning during development
currency = "0.4.0" # Testing secret rotation scheduling
fake = "2.9.1" # Generate test data
proptest = "1.3.1" # Property-based testing
test-case = "3.3.1" # Parametrized tests
docker-api = "0.14.0" # Integration testing with containers
tempfile = "3.9.0" # For creating temporary test directories
test-log = "0.2.14" # For enabling logging in tests
env_logger = "0.10.2" # For test logging
serial_test = "2.0.0" # For tests that need to be run serially

[workspace]
# Note: Commenting out workspace members that don't exist in the current project structure
# Uncomment these as the corresponding crates are created
members = [
    # "crates/malu-secret-rotation",
    # "crates/malu-auth-client",
    # "crates/malu-storage",
    # "crates/malu-crypto",
    # "crates/malu-core",
]
