[package]
name = "malu_app"
version = "0.1.0"
edition = "2021"
description = "App component for the Malu system"
authors = ["Malu Team"]
license = "PROPRIETARY"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Malu system components
malu_interfaces = { path = "../malu-interfaces" }
malu_core = { path = "../malu-core" }
malu_api = { path = "../malu-api" }

[dev-dependencies]
tempfile = "3.3"
