[package]
name = "malu_crypto"
version = "0.1.0"
edition = "2021"
description = "Crypto component for the Malu system"
authors = ["Malu Team"]
license = "PROPRIETARY"

[dependencies]
tokio = { version = "1.32.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
async-trait = "0.1.74"
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
base64 = "0.21"
rand = "0.8"
sodiumoxide = "0.2"
ring = "0.16"
argon2 = "0.5"
sha2 = "0.10"
zeroize = { version = "1.6", features = ["derive"] }
aes-gcm = "0.10"
hmac = "0.12"
blake3 = "1.4"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
x509-parser = "0.15"
hex = "0.4"

# HSM support (optional)
pkcs11 = { version = "0.5", optional = true }
yubikey = { version = "0.8", optional = true }

# Common interfaces
malu_interfaces = { path = "../malu-interfaces" }
malu_core = { path = "../malu-core" }

[features]
default = ["software"]
software = []
hsm = ["pkcs11", "yubikey"]
sodium = []
