[package]
name = "malu_event"
version = "0.1.0"
edition = "2021"
description = "Event component for the Malu system"
authors = ["Malu Team"]
license = "PROPRIETARY"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# For Kafka integration
rdkafka = { version = "0.34", features = ["cmake-build", "ssl", "libz"] }

# For general message broker abstraction
lapin = { version = "2.3", optional = true }  # RabbitMQ client

# Common interfaces
malu_interfaces = { path = "../malu-interfaces" }
malu_core = { path = "../malu-core" }

[features]
default = ["kafka"]
kafka = []
rabbitmq = ["lapin"]
in-memory = []
all = ["kafka", "rabbitmq", "in-memory"]
