[package]
name = "malu_governance"
version = "0.1.0"
edition = "2021"
description = "Governance component for the Malu system"
authors = ["Malu Team"]
license = "PROPRIETARY"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tracing = { workspace = true }

# Common interfaces
malu_interfaces = { path = "../malu-interfaces" }
malu_core = { path = "../malu-core" }

[dev-dependencies]
tempfile = "3.3"
mockito = "1.0"
