[package]
name = "malu_interfaces"
version = "0.1.0"
edition = "2021"
description = "Common interfaces for the Malu secure storage system"
authors = ["Malu Team"]
license = "PROPRIETARY"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
