[package]
name = "malu_storage"
version = "0.1.0"
edition = "2021"
description = "Storage component for the Malu system"
authors = ["Malu Team"]
license = "PROPRIETARY"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

# Common interfaces
malu_interfaces = { path = "../malu-interfaces" }
malu_core = { path = "../malu-core" }
malu_crypto = { path = "../malu-crypto" }

# File system dependencies
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["fs"] }
bytes = "1.4"
path-absolutize = "3.1"

# S3 dependencies (optional)
aws-config = { version = "0.55", optional = true }
aws-sdk-s3 = { version = "0.28", optional = true }

# PostgreSQL dependencies (optional)
tokio-postgres = { version = "0.7", features = ["with-uuid-1"], optional = true }
deadpool-postgres = { version = "0.10", optional = true }
pgvector = { version = "0.2", optional = true }

# Valkey/Redis dependencies (optional)
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"], optional = true }

# LevelDB dependencies (optional)
leveldb = { version = "0.8", optional = true }
templater = { version = "0.1.0", optional = true }

[features]
default = ["fs-storage", "memory-storage"]
fs-storage = []
memory-storage = []
s3-storage = ["dep:aws-config", "dep:aws-sdk-s3"]
postgres-storage = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:pgvector"]
valkey-storage = ["dep:redis"]
leveldb-storage = ["dep:leveldb", "dep:templater"]
